--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-	<!-- Navigation bar code -->
+	<!-- Navigation bar code for website -->
 	<nav class="main-navigation">
   	<ul class="menu">
     	<li><a class="homenav" href="index.html">Home</a></li>
