Revert "changed comments"
This reverts commit a5b78aad0e838908323461ba0cc0e0d924b08670.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-	<!-- Navigation bar code for website -->
+	<!-- Navigation bar code -->
 	<nav class="main-navigation">
   	<ul class="menu">
     	<li><a class="homenav" href="index.html">Home</a></li>
